--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" You can modify your pictur with some filters and chose how you want it (png) or (jpeg) But the pictur should be 600 in both dimensions">
     <title>Image Handlling</title>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js" ></script>
    <link rel="stylesheet" href="The_style.css">
 </head>
 <body>
